Avoid creating an extra `List<Reference>`